--- a/muapp/templates/login2.html
+++ b/muapp/templates/login2.html
@@ -11,6 +11,7 @@
 {% block content %}
 <div class="container-xxl py-5">
     <div class="container">
+        <div class="row">
             <div class="col-lg-6" style="padding-top: 100px;">
                 <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
                     <h1 class="display-5 mb-3 jamsil">로그인</h1>
@@ -32,11 +33,23 @@
                             {% if request.GET.next %}
                                <input type="hidden" name="next" value="{{ request.GET.next }}">
                             {% endif %}
-                            <button type="submit" class="btn btn-primary jamsil">로그인</button>
+                            <div class="d-flex align-items-center justify-content-start">
+                                <button type="submit" class="btn btn-primary jamsil">로그인</button>
+                                <a href="#" onclick="naverLogin()" style="margin-left: 10px;">
+                                    <img src="{% static 'img/btnG_완성형.png' %}"
+                                         onmouseover="this.src='{% static 'img/btnW_완성형.png' %}'"
+                                         onmouseleave="this.src='{% static 'img/btnG_완성형.png' %}'" height="45">
+                                </a>
+                            </div>
                         </form>
                     </div>
                 </div>
             </div>
+        </div>
     </div>
 </div>
 {% endblock %}
+
+{% block jsv %}
+<script src="{% static 'js/social_login.js' %}"></script>
+{% endblock jsv%}  
