--- a/muapp/templates/base.html
+++ b/muapp/templates/base.html
@@ -134,10 +134,9 @@
                     <h4 class="text-light mb-4 jamsil">바로가기</h4>
                     {% if user.is_authenticated %}
                     <a class="btn btn-link jamsil" href="{% url 'virtual_fit' user.first_name %}">가상 피팅</a>
-                    <a class="btn btn-link jamsil" href="{% url 'detail_closet' user.first_name %}">옷장 관리</a>
+                    <a class="btn btn-link jamsil" href="{% url 'view_closet' user.first_name %}">옷장 관리</a>
                     <a class="btn btn-link jamsil" href="{% url 'blog' user.first_name %}">코디 추천</a>
                     {% else %}
-                    <a class="btn btn-link jamsil" href="{% url 'detail_closet' " " %}">옷장 관리</a>
                     <a class="btn btn-link jamsil" href="{% url 'blog' " " %}">코디 추천</a>
                     {% endif %}
                     
