--- a/muapp/templates/index.html
+++ b/muapp/templates/index.html
@@ -97,10 +97,12 @@
                         <h4 class="mb-3 jamsil">가상 피팅</h4>
                         <p class="mb-4 jamsil">옷을 실제로 입지 않고도 가상에서<br>먼저 확인해 볼 수 있습니다!</p>
                         {% if user.is_authenticated %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'detail_closet' user.first_name %}">더보기</a>
-                        {% else %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'detail_closet' " " %}">로그인 하기</a>
-                        {% endif %}
+                            <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href='{% url 'view_closet' user.first_name %}'>더보기</a>
+                        {% comment %}
+                            {% else %}
+                            <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' "" %}">로그인 하기</a>
+                        {%endcomment%}
+                            {% endif %}
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -109,10 +111,13 @@
                         <h4 class="mb-3 jamsil">옷장 관리</h4>
                         <p class="mb-4 jamsil">내 전용 옷장을 만들어서 손쉽게 자신의 옷들을<br>관리할 수 있습니다!</p>
                         {% if user.is_authenticated %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'detail_closet' user.first_name %}">더보기</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' user.first_name %}">더보기</a>
+                        
+                        {% comment %}
                         {% else %}
-                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'detail_closet' " " %}">로그인 하기</a>
+                        <a class="btn btn-outline-primary border-2 py-2 px-4 rounded-pill jamsil" href="{% url 'view_closet' " " %}">로그인 하기</a>    -->
                         {% endif %}
+                        {% endcomment %}
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
