--- a/muapp/templates/blog.html
+++ b/muapp/templates/blog.html
@@ -26,9 +26,9 @@
     <!-- Blog Start -->
     <div class="container-xxl py-6">
         <div class="container jamsil">
-            <div class="section-header text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-5 mb-3">Latest Blog</h1>
-                <p>Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+            <div class="section-header text-center mx-auto mb-5 wow fadeInUp jamsil" data-wow-delay="0.1s" style="max-width: 500px;">
+                <h1 class="display-5 mb-3 jamsil">코디 북</h1>
+                <p>관심있는 코디들을 확인해 보세요!</p>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
